--- a/admin/css/sb-admin-2.css
+++ b/admin/css/sb-admin-2.css
@@ -389,3 +389,8 @@ table.dataTable thead .sorting:after {
     color: #fff;
     background-color: #5cb85c;   
 }
+/*Stylish radiobutton*/
+#radioBtn .notActive{
+    color: #3276b1;
+    background-color: #fff;
+}
